# Beauvoir

./: .gitignore  CMakeLists.txt  DOC.md  README.md  build.bat  build.sh
demo/: README.md
demo/empty/: empty.c
demo/gestalt/: CMakeLists.txt  gestalt.c  lit.glsl  texture_unlit.glsl
demo/gestalt/samples/: illustration.psd  template.psd
demo/image_viewer/: image_viewer.c
demo/scene/: monochrome.glsl  scene.c
demo/shaders/: default_lit.glsl  landscape.glsl  texture_unlit.glsl  unlit_layer.glsl
include/: nuklear.h  nuklear_sdl_gles2.h  zconf.h
include/BVR/: actors.h  assets.book.h  assets.h  audio.h  buffer.h  bvr.h  camera.h  common.h  config.h  file.h  graphics.h  gui.h  image.h  lights.h  math.h  mesh.h  physics.h  scene.h  shader.h  utils.h  window.h
include/BVR/editor/: camera.h  editor.h  flags.h  landscape.h
include/GLAD/: glad.h
include/SDL3/: SDL_clipboard.h  SDL_cpuinfo.h  SDL_gpu.h  SDL_hidapi.h  SDL_iostream.h  SDL_opengl_glext.h  SDL_opengles2_khrplatform.h  SDL_process.h  SDL_revision.h  SDL_stdinc.h  SDL_test_compare.h  SDL_test_font.h  SDL_test_log.h  SDL_video.h
include/libpng16/: png.h  pngconf.h  pnglibconf.h
src/: actors.c  assets.c  audio.c  buffer.c  camera.c  common.c  file.c  glad.c  graphics.c  gui.c  image.c  lights.c  mesh.c  physics.c  scene.c  shader.c  utils.c  window.c
src/editor/: camera.c  editor.c  landscape.c
